<resources>
    <string name="app_name">StackOverflowClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ask_question">Ask Question</string>
    <string name="tv_body">Body</string>
    <string name="et_body">Body</string>
    <string name="et_title">Title</string>
    <string name="tv_title">Title</string>
    <string name="btn_save">Save</string>
</resources>